Con las contraseñas con BCrypt

--- a/VeterinarioBasico/VentanaPrincipal.resx
+++ b/VeterinarioBasico/VentanaPrincipal.resx
@@ -124,8 +124,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD+
-        EQAAAk1TRnQBSQFMAgEBBAEAAQgBAAEIAQABIAEAASABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD6
+        EQAAAk1TRnQBSQFMAgEBBAEAARABAAEQAQABIAEAASABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABgAMAAUADAAEBAQABCAYAASAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -157,51 +157,51 @@
         /wD/AP8A/wD/AP8A/wD/AP8AEgAB9AG7GrQBuwH0CAAB/wH0AfIBvAK7BrQCuwG8AfIB9AH/CQAB/wG7
         AbQB8QQAAfEBtAG7Af8HAAHyAbQBuwH/EAAB9AG7AbUBuwG8A/QB8QK7AbwB9AoAAfQetAH0BAAB/wHy
         AbsStAG7AfIB/wYAAfEDtAH/AgAB9AO0AfIGAAH/A7QBvA8AAfMNtAH0CQABuwK0AfAY8QHwArQBuwMA
-        AfMYtAHzBQABvAO0AfUCAAG7A7QB8wYAAf8DtAEJDgAB/w60AbsJAAK0AfAaAAG8ArQCAAH0GrQB9AQA
-        AbwDtAH1AQAB9AS0Af8GAAH/A7QBCQ4AAfIPtAH/CAACtAHxGgAB8QK0AgABvBq0AbwEAAG8A7QB9QEA
-        AbsDtAHzBwAB/wO0AQkOAAHxD7QB/wgAArQB8QkAAfIDtAG7DAAB8QK0AgABvBq0AbwEAAG8A7QB9QHz
-        A7QBuwH/BwAB/wO0AQkOAAH0DrQB8AkAArQB8QkAAf8EtAH0CwAB8QK0AgAB8Bq0AfAEAAG8A7QB9QEJ
-        A7QB9AgAAf8DtAEJDwAB8wy0Ae4B/wkAArQB8QoAAfEDtAHuCwAB8QK0AgAB9Bq0AfQEAAG8A7QB9QEJ
-        ArQBuwkAAf8DtAEJEAAB9AG7CbQBuwH/CgACtAHxCgAB/wS0Af8KAAHxArQDAAHwGLQB8QUAAbwDtAH1
+        AfMYtAHzBQABvAO0Af8CAAG7A7QB8wYAAf8DtAEJDgAB/w60AbsJAAK0AfAaAAG8ArQCAAH0GrQB9AQA
+        AbwDtAH/AQAB9AS0Af8GAAH/A7QBCQ4AAfIPtAH/CAACtAHxGgAB8QK0AgABvBq0AbwEAAG8A7QB/wEA
+        AbsDtAHzBwAB/wO0AQkOAAHxD7QB/wgAArQB8QkAAfIDtAG7DAAB8QK0AgABvBq0AbwEAAG8A7QB/wHz
+        A7QBuwH/BwAB/wO0AQkOAAH0DrQB8AkAArQB8QkAAf8EtAH0CwAB8QK0AgAB8Bq0AfAEAAG8A7QB/wEJ
+        A7QB9AgAAf8DtAEJDwAB8wy0AbwB/wkAArQB8QoAAfEDtAG8CwAB8QK0AgAB9Bq0AfQEAAG8A7QB/wEJ
+        ArQBuwkAAf8DtAEJEAAB9AG7CbQBuwH/CgACtAHxCgAB/wS0Af8KAAHxArQDAAHwGLQB8QUAAbwDtAH/
         AQkCtAH0CQAB/wO0AQkRAAH/AbsHtAG7Af8LAAK0AfELAAHxA7QB8AoAAfECtAMAAf8B8Ra0AfEGAAG8
-        A7QB9QG8AbUBvAoAAf8DtAEJEgAB/wG7BrQB9AMAAf8B9AH1BgACtAHxCwAB/wS0Af8JAAHxArQFAAH0
-        E7QBtQH0BwABvAO0AfUNAAH/A7QBCRMAAfMFtAG7AwAB/wG1ArQBCQUAArQB8QwAAfEDtAHzCQAB8QK0
-        BgAB/wHwELQB8AH/CAABuwS0DbUEtAG1DQAB/wHxAe4B8gIAAf8FtAG8AgAB/wG7BLQB9AQAArQB8QwA
+        A7QB/wG8AbUBvAoAAf8DtAEJEgAB/wG7BrQB9AMAAf8B9AH/BgACtAHxCwAB/wS0Af8JAAHxArQFAAH0
+        E7QBtQH0BwABvAO0Af8NAAH/A7QBCRMAAfMFtAG7AwAB/wG1ArQBCQUAArQB8QwAAfEDtAHzCQAB8QK0
+        BgAB/wHwELQB8AH/CAABuwS0DbUEtAG1DQAB/wHxAbwB8gIAAf8FtAG8AgAB/wG7BLQB9AQAArQB8QwA
         Af8DtAG7CQAB8QK0CAAB/wHxAbsKtAG7AfEB/woAAbsWtAH/CwAB/wG7A7QB9AIAAfMDtAG1Af8BAAH/
-        AbsFtAHuBAACtAHxDQAB8QO0AfUIAAHxArQLAAH0CLQB9A0AAbsWtAH0CwABvAW0AfQCAAH0AfIB8wH/
-        AgAB9Aa0AbUEAAK0AfEIAAW8Ae4DtAG8CAAB8QK0DAABuwa0AbsOAAG8FrQB8QoAAf8HtAH/BwAB/we0
-        BAACtAHxCAAKtAgAAfECtAwAAbsGtAG7DgABvBa0AbsKAAH0B7QB/wgAAfAGtAQAArQB8QgACrQIAAHx
-        ArQLAAH/CLQB/w0AAbwWtAHwCgAB8ga0AbsJAAH/AbsEtAG8BAACtAHxCAAK9AgAAfECtAoAAf8Buwi0
-        AbsB/wwAAbwUtAG8Af8LAAH0BrQB/woAAf8B7gK0Ae4B/wQAArQB8RoAAfECtAoAAbwKtAG8DAABvBK0
-        AbwB/wEAAf8B8woAAf8FtAHzCAAB/wL0AgAD/wHzBAACtAHxGgAB8QK0CQAB9Ay0AfQKAAH/EbQBvAH/
-        AQAB/wHyAbQBtQsAAfEDtAHwAQAB/wL0Af8DAAH/AbsCtAG7Af8BAAH0AbQBvAQAArQB8Br/AfACtAkA
-        AbwMtAG8CQAB/wG7D7QB8AH/AQAB/wHyAbUCtAG1DAAB9AHwAfMBAAH/AbsCtAG7Af8CAAHwBLQBvAEA
-        Af8BuwH0BAAgtAgAAf8OtAkAAbsCtAG8Af8NAAH/AfIBtQS0AbUMAAL0Af8BAAHwBLQB8wIAAbUFtAH/
-        AQAB/wUAILQIAAH1DrQB9QgAArQBCQH/DgAB9Qe0A7sB8wgAAfMBtAHzAf8FtAEJAQAB/wa0AfQHACC0
-        CAAB9A60AfQIAAH1AfQB/xAAAbsKtAHzBwAB/wG8AfUB/wW0AbsBAAH1BrQB/wcACLQBuwG1DLQBtQG7
-        CLQIAAHzDrQB8xsAAfEKtAG7CgAB/wW0AbUBAAH/BbQBtQgABrQBuwP/AbwKtAG8A/8Buwa0CAAB8w60
-        AfMbAAH/C7QB9AoAAbsEtAG7AgAFtAHzCAAGtAH0AfIBtAG8Af8KtAH/AQkBtAHyAfQGtAgAAfQOtAH0
-        HAABuwS0AbwBuwS0AbsKAAH0BLQBvAIAAe4DtAHuAf8IAAG8BbQB9QEJAbQBtQEACrQBAAG1AbQBCQH1
-        BbQBvAkADbQBtR0AAfIEtAHxAbsDtAG7AfMLAAHwA7QB9AIAAf8CuwHyAf8JAAH/AbsEtAH1AQkBtAG1
-        AQAKtAEAAbUBtAEJAfUEtAG7Af8JAAHxDLQB8h0AAf8HtAHwAf8OAAH0AfIB9BIAAf8B8wO8Af8BCQG0
-        AbUBAAq8AQABtQG0AQkB/wO8AfMB/woAAf8Buwq0AbsB/x0AAf8CtAG7ArwB8wH/EQAB9QHzAfQBAAH/
-        AvMB/xIAAQkBtAG1DAABtQG0AQkRAAH/AbsItAG7Af8eAAH/AbQBuwH/FQAB/wG1AbsBAAH/AbQBuwH/
-        EgAB8wG0AfAMAAHwAbQB8xMAAfQBvAS0AbwB9CAAAf8BuwH/FwAB/wHwAQAB/wG8Af8MAAFCAU0BPgcA
-        AT4DAAEoAwABgAMAAUADAAEBAQABAQYAAQQWAAP//wD/AAMAAYACAAEBAf4CAAF/AsMB+AF/Af8BgAED
-        Af8EAAHwAgABDwHBAYMB8AF/Af8BAAEBAf8EAAHgAgABBwHBAYMB8AF/Af4BAAEBAf8BHwL/AfgBwAIA
-        AQMBwQEDAfABfwH+AgAB/wEfAv8B+AHAAgABAwHBAQcB8AF/Af4CAAH/AR8B8AF/AfgBwAIAAQMBwAEH
-        AfABfwH+AQABAQH/AR8B8AE/AfgBwAIAAQMBwAEPAfABfwH/AQABAQH/AR8B+AE/AfgBwAIAAQMBwAEf
-        AfABfwH/AYABAwH/AR8B+AEfAfgB4AIAAQcBwAEfAfABfwH/AcABBwH/AR8B/AEfAfgB4AIAAQ8BwAE/
-        AfABfwH/AeABDgE/AR8B/AEPAvgCAAEfAcEB/wHwAX8B/wHwARwCHwH+AQ8B+AH8AgABPwHAAgABfwH8
-        ATABGAEPAR8B/gEPAfgB/wIAAf8BwAIAAT8B+AEYARABDwEfAf8BBwH4Af8B4AEHAf8BwAIAAT8B+AEM
-        ATABDwEfAeABBwH4Af8B8AEPAf8BwAIAAT8B8AEHAfABDwEfAeABBwH4Af8B8AEPAf8BwAIAAT8B8AEH
-        AfgBDwEfAeABBwH4Af8B4AEHAf8BwAIAAT8B8AEPAfgBDwEfAeABBwH4Af8BwAEDAf8BwAIAAX8B8AEP
-        AfwBDwEfAv8B+AH/AcABAwH/AcABAAEBAT8B8AEfAeMBDwEfAv8B+AH/AYABAQH/AYABAAEEAT8B+AEh
-        AcABjwQAAf8BgAEBAf8CAAEQAT8B/AFAAcABjwQAAf8BAAEBAf8BBwH/AcABPwH8AUABwAFfBAAB/wIA
-        Af8BDwH/AcABAwH8AQABgAF/BAAB/wIAAf8BHwH/AeABAQH8AQABgAF/BAAB/wIAA/8B4AEBAf8CgAH/
-        BAAB/wIAA/8B4AEAAf8CwAH/BAAB/wIAA/8B8AEAAf8CwAH/AQABIAEEAQAB/wGAAQED/wHwAQAB/wHg
-        AcEB/wEAASABBAEAAf8BgAEBA/8B8AEDAf8B8QL/AYABIAEEAQEB/wGAAQED/wHwAQ8B/wH4AYcB/wH+
-        AT8B/AF/Af8BwAEDA/8B8AL/AfgBhwH/Af4BPwH8AX8B/wHwAQ8D/wHxAv8B/AGPAf8L
+        AbsFtAG8BAACtAHxDQAB8QO0Af8IAAHxArQLAAH0CLQB9A0AAbsWtAH0CwABvAW0AfQCAAH0AfIB8wH/
+        AgAB9Aa0AbUEAAK0AfEIAAa8A7QBvAgAAfECtAwAAbsGtAG7DgABvBa0AfEKAAH/B7QB/wcAAf8HtAQA
+        ArQB8QgACrQIAAHxArQMAAG7BrQBuw4AAbwWtAG7CgAB9Ae0Af8IAAHwBrQEAAK0AfEIAAq0CAAB8QK0
+        CwAB/wi0Af8NAAG8FrQB8AoAAfIGtAG7CQAB/wG7BLQBvAQAArQB8QgACvQIAAHxArQKAAH/AbsItAG7
+        Af8MAAG8FLQBvAH/CwAB9Aa0Af8KAAH/AbwCtAG8Af8EAAK0AfEaAAHxArQKAAG8CrQBvAwAAbwStAG8
+        Af8BAAH/AfMKAAH/BbQB8wgAAf8C9AIAA/8B8wQAArQB8RoAAfECtAkAAfQMtAH0CgAB/xG0AbwB/wEA
+        Af8B8gG0AbULAAHxA7QB8AEAAf8C9AH/AwAB/wG7ArQBuwH/AQAB9AG0AbwEAAK0AfAa/wHwArQJAAG8
+        DLQBvAkAAf8Buw+0AfAB/wEAAf8B8gG1ArQBtQwAAfQB8AHzAQAB/wG7ArQBuwH/AgAB8AS0AbwBAAH/
+        AbsB9AQAILQIAAH/DrQJAAG7ArQBvAH/DQAB/wHyAbUEtAG1DAAC9AH/AQAB8AS0AfMCAAG1BbQB/wEA
+        Af8FACC0CAAB/w60Af8IAAK0AQkB/w4AAf8HtAO7AfMIAAHzAbQB8wH/BbQBCQEAAf8GtAH0BwAgtAgA
+        AfQOtAH0CAAB/wH0Af8QAAG7CrQB8wcAAf8BvAL/BbQBuwEAAf8GtAH/BwAItAG7AbUMtAG1AbsItAgA
+        AfMOtAHzGwAB8Qq0AbsKAAH/BbQBtQEAAf8FtAG1CAAGtAG7A/8BvAq0AbwD/wG7BrQIAAHzDrQB8xsA
+        Af8LtAH0CgABuwS0AbsCAAW0AfMIAAa0AfQB8gG0AbwB/wq0Af8BCQG0AfIB9Aa0CAAB9A60AfQcAAG7
+        BLQBvAG7BLQBuwoAAfQEtAG8AgABvAO0AbwB/wgAAbwFtAH/AQkBtAG1AQAKtAEAAbUBtAEJAf8FtAG8
+        CQANtAG1HQAB8gS0AfEBuwO0AbsB8wsAAfADtAH0AgAB/wK7AfIB/wkAAf8BuwS0Af8BCQG0AbUBAAq0
+        AQABtQG0AQkB/wS0AbsB/wkAAfEMtAHyHQAB/we0AfAB/w4AAfQB8gH0EgAB/wHzA7wB/wEJAbQBtQEA
+        CrwBAAG1AbQBCQH/A7wB8wH/CgAB/wG7CrQBuwH/HQAB/wK0AbsCvAHzAf8RAAH/AfMB9AEAAf8C8wH/
+        EgABCQG0AbUMAAG1AbQBCREAAf8Buwi0AbsB/x4AAf8BtAG7Af8VAAH/AbUBuwEAAf8BtAG7Af8SAAHz
+        AbQB8AwAAfABtAHzEwAB9AG8BLQBvAH0IAAB/wG7Af8XAAH/AfABAAH/AbwB/wwAAUIBTQE+BwABPgMA
+        ASgDAAGAAwABQAMAAQEBAAEBBgABBBYAA///AP8AAwABgAIAAQEB/gIAAX8CwwH4AX8B/wGAAQMB/wQA
+        AfACAAEPAcEBgwHwAX8B/wEAAQEB/wQAAeACAAEHAcEBgwHwAX8B/gEAAQEB/wEfAv8B+AHAAgABAwHB
+        AQMB8AF/Af4CAAH/AR8C/wH4AcACAAEDAcEBBwHwAX8B/gIAAf8BHwHwAX8B+AHAAgABAwHAAQcB8AF/
+        Af4BAAEBAf8BHwHwAT8B+AHAAgABAwHAAQ8B8AF/Af8BAAEBAf8BHwH4AT8B+AHAAgABAwHAAR8B8AF/
+        Af8BgAEDAf8BHwH4AR8B+AHgAgABBwHAAR8B8AF/Af8BwAEHAf8BHwH8AR8B+AHgAgABDwHAAT8B8AF/
+        Af8B4AEOAT8BHwH8AQ8C+AIAAR8BwQH/AfABfwH/AfABHAIfAf4BDwH4AfwCAAE/AcACAAF/AfwBMAEY
+        AQ8BHwH+AQ8B+AH/AgAB/wHAAgABPwH4ARgBEAEPAR8B/wEHAfgB/wHgAQcB/wHAAgABPwH4AQwBMAEP
+        AR8B4AEHAfgB/wHwAQ8B/wHAAgABPwHwAQcB8AEPAR8B4AEHAfgB/wHwAQ8B/wHAAgABPwHwAQcB+AEP
+        AR8B4AEHAfgB/wHgAQcB/wHAAgABPwHwAQ8B+AEPAR8B4AEHAfgB/wHAAQMB/wHAAgABfwHwAQ8B/AEP
+        AR8C/wH4Af8BwAEDAf8BwAEAAQEBPwHwAR8B4wEPAR8C/wH4Af8BgAEBAf8BgAEAAQQBPwH4ASEBwAGP
+        BAAB/wGAAQEB/wIAARABPwH8AUABwAGPBAAB/wEAAQEB/wEHAf8BwAE/AfwBQAHAAV8EAAH/AgAB/wEP
+        Af8BwAEDAfwBAAGAAX8EAAH/AgAB/wEfAf8B4AEBAfwBAAGAAX8EAAH/AgAD/wHgAQEB/wKAAf8EAAH/
+        AgAD/wHgAQAB/wLAAf8EAAH/AgAD/wHwAQAB/wLAAf8BAAEgAQQBAAH/AYABAQP/AfABAAH/AeABwQH/
+        AQABIAEEAQAB/wGAAQED/wHwAQMB/wHxAv8BgAEgAQQBAQH/AYABAQP/AfABDwH/AfgBhwH/Af4BPwH8
+        AX8B/wHAAQMD/wHwAv8B+AGHAf8B/gE/AfwBfwH/AfABDwP/AfEC/wH8AY8B/ws=
 </value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
