Con interfaz pago, y mejora de consultas

--- a/VeterinarioBasico/VentanaLogin.resx
+++ b/VeterinarioBasico/VentanaLogin.resx
@@ -124,8 +124,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACU
-        CgAAAk1TRnQBSQFMAgEBBAEAASABAAEgAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACK
+        CgAAAk1TRnQBSQFMAgEBBAEAASgBAAEoAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -154,23 +154,23 @@
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
         AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ACQAB8wa0
-        AfQkAAb/AfUJ/wQACLQYAAH/AgAC8QIAAf8EAAT/AQkB7gH0Cf8EAAe0AfAXAAHzAbQB/wEAArsBAAH/
-        AbQB9AMAA/8BuwG0AQkB8gn/BQABtQS0AbsJAAH/AfMEuwHzAf8FAAH/AQAB/wG0AfABAAK7AQABvAG1
-        Af8BAAH/AQAC/wG8AbMBtALzCf8GAAG7A7QCAAH0BgAB/wG7AbwB/wIAAf8BvAG7Af8DAAH/AbUB9AEA
-        AbwBtAG1ArQBtQG0AfEBAAH0AbsC/wH0AfEDtAH1Cf8DAAH/AbwBAAH/ArQBvAEAAbsCtAQAAf8BuwH0
-        Af8B8AK1AfEB/wH0AbsB/wIAAf8BuwG0AbwItAG8AbQBvAL/AQkB8AG7ArQBswEZCP8DAAO0AQAB9AHz
-        AQAB9AO0AgAB9AHzAvEBAAHwBLQB8AEAAvEB8gH0AQAB/wG7CrQBuwH/AQAB/wG0AfEB8AHzAbMBGQn/
-        AgAB9AO0Af8EAAO0AgABuwK0Af8BAAG1BLQBtQEAAf8CtAG7AQABvAy0AbwBAAH/AQkBvALwA/QI/wIA
-        AfQDtAUAAf8BtAG8AgAB8wK0AfAB/wG1BLQBtQH/AfACtAHzAfQOtAH0Af8BGQGzBfAB9Af/AwACtAEA
-        AfQB/wEAAf8BtAG7AQABtAMAAfACtAK7BLQCuwK0AfABAAH/DrQD/wGzAbQD8AL/AfUBtAX/AwAB9AH/
-        AfACtAEAAbUCtAL/BAAB8wq0AfMDAAHzDLQB8gEAAv8BCQG0AbMB8AG0ARkBtAGzAa0F/wMAAv8DtAEA
-        A7QB/wYAAf8B8QG1BLQBtQHxAf8FAAHwCrQB8AIAA/8BtQW0AbMB9AX/BQABuwK0AQADtAoAAf8C9AH/
-        CQAB8wi0AfMDAAT/AfMCswO0Bv8GAAK0AQAB/wG7Af8YAAH/AfEEuwHxAf8EAAf/ARkBtAEJBv8HAAHz
-        AQAB8wH/JQAI/wHxAfUG/wcAAf8BAAG8JgAQ/wFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYA
-        AQEWAAP/gQAB8AEPBP8CAAHwAQ8C/wH2AW8CAAHwAQ8C/wHiAUcCAAH4AR8B8AEPAaIBRQIAAfwBNwHh
-        AYcBEAEIAgAB5AEjAcABAwQAAeIBQwEIARABgAEBAgABwQHjAQgBEAGAAQECAAHDAeMGAAHkAYsBgAEB
-        BAAB4AGDAcABAwGAAQECAAHgAYcB4AEHAcABAwIAAfgBjwH8AT8B4AEHAgAB/AGPAv8B8AEPAgAB/gGf
-        BP8CAAH+Ab8E/wIACw==
+        AfQkABD/BAAItBgAAf8CAALxAgAB/wQABP8BCQG8AfQJ/wQAB7QB8BcAAfMBtAH/AQACuwEAAf8BtAH0
+        AwAD/wG7AbQBCQHyCf8FAAG1BLQBuwkAAf8B8wS7AfMB/wUAAf8BAAH/AbQB8AEAArsBAAG8AbUB/wEA
+        Af8BAAL/AbwBswG0AvMJ/wYAAbsDtAIAAfQGAAH/AbsBvAH/AgAB/wG8AbsB/wMAAf8BtQH0AQABvAG0
+        AbUCtAG1AbQB8QEAAfQBuwL/AfQB8QO0Cv8DAAH/AbwBAAH/ArQBvAEAAbsCtAQAAf8BuwH0Af8B8AK1
+        AfEB/wH0AbsB/wIAAf8BuwG0AbwItAG8AbQBvAL/AQkB8AG7ArQBswEZCP8DAAO0AQAB9AHzAQAB9AO0
+        AgAB9AHzAvEBAAHwBLQB8AEAAvEB8gH0AQAB/wG7CrQBuwH/AQAB/wG0AfEB8AHzAbMBGQn/AgAB9AO0
+        Af8EAAO0AgABuwK0Af8BAAG1BLQBtQEAAf8CtAG7AQABvAy0AbwBAAH/AQkBvALwA/QI/wIAAfQDtAUA
+        Af8BtAG8AgAB8wK0AfAB/wG1BLQBtQH/AfACtAHzAfQOtAH0Af8BGQGzBfAB9Af/AwACtAEAAfQB/wEA
+        Af8BtAG7AQABtAMAAfACtAK7BLQCuwK0AfABAAH/DrQD/wGzAbQD8AP/AbQF/wMAAfQB/wHwArQBAAG1
+        ArQC/wQAAfMKtAHzAwAB8wy0AfIBAAL/AQkBtAGzAfABtAEZAbQBswGtBf8DAAL/A7QBAAO0Af8GAAH/
+        AfEBtQS0AbUB8QH/BQAB8Aq0AfACAAP/AbUFtAGzAfQF/wUAAbsCtAEAA7QKAAH/AvQB/wkAAfMItAHz
+        AwAE/wHzArMDtAb/BgACtAEAAf8BuwH/GAAB/wHxBLsB8QH/BAAH/wEZAbQBCQb/BwAB8wEAAfMB/yUA
+        CP8B8Qf/BwAB/wEAAbwmABD/AUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAHw
+        AQ8E/wIAAfABDwL/AfYBbwIAAfABDwL/AeIBRwIAAfgBHwHwAQ8BogFFAgAB/AE3AeEBhwEQAQgCAAHk
+        ASMBwAEDBAAB4gFDAQgBEAGAAQECAAHBAeMBCAEQAYABAQIAAcMB4wYAAeQBiwGAAQEEAAHgAYMBwAED
+        AYABAQIAAeABhwHgAQcBwAEDAgAB+AGPAfwBPwHgAQcCAAH8AY8C/wHwAQ8CAAH+AZ8E/wIAAf4BvwT/
+        AgAL
 </value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
