--- a/VeterinarioBasico/VentanaPrincipalTrabajador.resx
+++ b/VeterinarioBasico/VentanaPrincipalTrabajador.resx
@@ -124,9 +124,9 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAg
-        DwAAAk1TRnQBSQFMAgEBAwEAASABAAEgAQABIAEAASABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABgAMAASADAAEBAQABCAYAARAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB4
+        FAAAAk1TRnQBSQFMAgEBBQEAATgBAAE4AQABIAEAASABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABgAMAAUADAAEBAQABCAYAASAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
         AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
@@ -153,43 +153,66 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wIAAfQBuxq0AbsB9AgA
-        Af8B9AHyAbwCuwa0ArsBvAHyAfQB/xAAAfQBuwG1AbsBvAP0AfECuwG8AfQqAAH0HrQB9AQAAf8B8gG7
-        ErQBuwHyAf8MAAHzDbQB9CkAAbsCtAHwGPEB8AK0AbsDAAHzGLQB8woAAf8OtAG7KQACtAHwGgABvAK0
-        AgAB9Bq0AfQJAAHyD7QB/ygAArQB8RoAAfECtAIAAbwatAG8CQAB8Q+0Af8oAAK0AfEJAAHyA7QBuwwA
-        AfECtAIAAbwatAG8CQAB9A60AfApAAK0AfEJAAH/BLQB9AsAAfECtAIAAfAatAHwCgAB8wy0AbwB/ykA
-        ArQB8QoAAfEDtAG8CwAB8QK0AgAB9Bq0AfQLAAH0AbsJtAG7Af8qAAK0AfEKAAH/BLQB/woAAfECtAMA
-        AfAYtAHxDQAB/wG7B7QBuwH/KwACtAHxCwAB8QO0AfAKAAHxArQDAAH/AfEWtAHxDwAB/wG7BrQB9AMA
-        Af8B9AH/JgACtAHxCwAB/wS0Af8JAAHxArQFAAH0E7QBtQH0EQAB8wW0AbsDAAH/AbUCtAEJJQACtAHx
-        DAAB8QO0AfMJAAHxArQGAAH/AfAQtAHwAf8MAAH/AfEBvAHyAgAB/wW0AbwCAAH/AbsEtAH0JAACtAHx
-        DAAB/wO0AbsJAAHxArQIAAH/AfEBuwq0AbsB8QH/DQAB/wG7A7QB9AIAAfMDtAG1Af8BAAH/AbsFtAG8
-        JAACtAHxDQAB8QO0Af8IAAHxArQLAAH0CLQB9BAAAbwFtAH0AgAB9AHyAfMB/wIAAfQGtAG1JAACtAHx
-        CAAGvAO0AbwIAAHxArQMAAG7BrQBuxAAAf8HtAH/BwAB/we0JAACtAHxCAAKtAgAAfECtAwAAbsGtAG7
-        EAAB9Ae0Af8IAAHwBrQkAAK0AfEIAAq0CAAB8QK0CwAB/wi0Af8PAAHyBrQBuwkAAf8BuwS0AbwkAAK0
-        AfEIAAr0CAAB8QK0CgAB/wG7CLQBuwH/DgAB9Aa0Af8KAAH/AbwCtAG8Af8kAAK0AfEaAAHxArQKAAG8
-        CrQBvA4AAf8FtAHzCAAB/wL0AgAD/wHzJAACtAHxGgAB8QK0CQAB9Ay0AfQOAAHxA7QB8AEAAf8C9AH/
-        AwAB/wG7ArQBuwH/AQAB9AG0AbwkAAK0AfAa/wHwArQJAAG8DLQBvA8AAfQB8AHzAQAB/wG7ArQBuwH/
-        AgAB8AS0AbwBAAH/AbsB9CQAILQIAAH/DrQPAAL0Af8BAAHwBLQB8wIAAbUFtAH/AQAB/yUAILQIAAH/
-        DrQB/w4AAfMBtAHzAf8FtAEJAQAB/wa0AfQnACC0CAAB9A60AfQOAAH/AbwC/wW0AbsBAAH/BrQB/ycA
-        CLQBuwG1DLQBtQG7CLQIAAHzDrQB8xEAAf8FtAG1AQAB/wW0AbUoAAa0AbsD/wG8CrQBvAP/AbsGtAgA
-        AfMOtAHzEgABuwS0AbsCAAW0AfMoAAa0AfQB8gG0AbwB/wq0Af8BCQG0AfIB9Aa0CAAB9A60AfQSAAH0
-        BLQBvAIAAbwDtAG8Af8oAAG8BbQB/wEJAbQBtQEACrQBAAG1AbQBCQH/BbQBvAkADbQBtRQAAfADtAH0
-        AgAB/wK7AfIB/ykAAf8BuwS0Af8BCQG0AbUBAAq0AQABtQG0AQkB/wS0AbsB/wkAAfEMtAHyFQAB9AHy
-        AfQyAAH/AfMDvAH/AQkBtAG1AQAKvAEAAbUBtAEJAf8DvAHzAf8KAAH/AbsKtAG7Af8WAAH/AfMB9AEA
-        Af8C8wH/MgABCQG0AbUMAAG1AbQBCREAAf8Buwi0AbsB/xcAAf8BtQG7AQAB/wG0AbsB/zIAAfMBtAHw
-        DAAB8AG0AfMTAAH0AbwEtAG8AfQaAAH/AfABAAH/AbwB/ywAAUIBTQE+BwABPgMAASgDAAGAAwABIAMA
-        AQEBAAEBBgABAhYAA/8BAAGAAgABAQH+AgABfwH/AYABAwH/CAAB8AIAAQ8B/wEAAQEB/wgAAeACAAEH
-        Af4BAAEBAf8EAAEfAv8B+AHAAgABAwH+AgAB/wQAAR8C/wH4AcACAAEDAf4CAAH/BAABHwHwAX8B+AHA
-        AgABAwH+AQABAQH/BAABHwHwAT8B+AHAAgABAwH/AQABAQH/BAABHwH4AT8B+AHAAgABAwH/AYABAwH/
-        BAABHwH4AR8B+AHgAgABBwH/AcABBwH/BAABHwH8AR8B+AHgAgABDwH/AeABDgE/BAABHwH8AQ8C+AIA
-        AR8B/wHwARwBHwQAAR8B/gEPAfgB/AIAAT8B/AEwARgBDwQAAR8B/gEPAfgB/wIAAf8B+AEYARABDwQA
-        AR8B/wEHAfgB/wHgAQcB/wH4AQwBMAEPBAABHwHgAQcB+AH/AfABDwH/AfABBwHwAQ8EAAEfAeABBwH4
-        Af8B8AEPAf8B8AEHAfgBDwQAAR8B4AEHAfgB/wHgAQcB/wHwAQ8B+AEPBAABHwHgAQcB+AH/AcABAwH/
-        AfABDwH8AQ8EAAEfAv8B+AH/AcABAwH/AfABHwHjAQ8EAAEfAv8B+AH/AYABAQH/AfgBIQHAAY8IAAH/
-        AYABAQH/AfwBQAHAAY8IAAH/AQABAQH/AfwBQAHAAV8IAAH/AgAB/wH8AQABgAF/CAAB/wIAAf8B/AEA
-        AYABfwgAAf8CAAL/AoAB/wgAAf8CAAL/AsAB/wgAAf8CAAL/AsAB/wUAASABBAEAAf8BgAEBAv8B4AHB
-        Af8FAAEgAQQBAAH/AYABAQL/AfEC/wQAAYABIAEEAQEB/wGAAQEC/wH4AYcB/wQAAf4BPwH8AX8B/wHA
-        AQMC/wH4AYcB/wQAAf4BPwH8AX8B/wHwAQ8C/wH8AY8B/wQACw==
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8AmwAB9AHzAf97AAH/
+        AbsCtAG1Af95AAH/AbsBtAHxAfMBtAHzeAAB/wG7AbQB8QEAAfABtAH0eAABuwG0AfEBAAHxAbQBCXgA
+        AfQBtAHwAQAB8QG0Ae4B/24AAfQB8gLwAfIB9AH/AwAB9AG0AbwB8AG0AbsB/2wAAf8B8gG1B7QB8QH/
+        AQAB8AO0Ae4B/2wAAf8BuwG0AbsB8gH/AgAB/wHzAbsBtAG1AfUBCQHwAvVtAAH/AbsBtAHyAf8HAAH0
+        ArQB9XAAAbsBtAH0CgAB9QG0AbsB/24AAfQBtAHxAQAB8wH/CQAB9AG0AfFuAAG7AbUB/wEAAbsB8woA
+        AbsBtAH/bAAB/wG0AfAOAAHzAbQB9GwAAfQBtAH0DgAB/wG0AfFsAAHyAbQC/wHwAf8MAAG0AbxsAAHz
+        AbQB9QHzAbQB9QsAAf8BtAHwbAAB9AG0AvQBtAHyCwAB/wG0AfJsAAH/AbQBvAEAAbUBuwH/CgAB8gG0
+        AfRtAAG7AbQB/wHzAbQB7gH/CAAB/wG7AbVuAAH0AbQBvAEAAfEBtAG7AfMB9QH/BQAB8QG0AfNvAAG8
+        AbQB8gEAAfQDtAG7BAAB9AG0AbsB/28AAf8BuwG0AbwC/wH0AfIB9AIAAf8B8QG0AbsB/3EAAf8BvAK0
+        AfAB9AL1AfQB8AG1AbQBuwH/dAAB9AG7BrQBuwH0eAAB/wH0AvIB9AH//wDyAAH0AbsatAG7AfQIAAH/
+        AfQB8gG8ArsGtAK7AbwB8gH0Af8QAAH0AbsBtQG7AbwD9AHxArsBvAH0KgAB9B60AfQEAAH/AfIBuxK0
+        AbsB8gH/DAAB8w20AfQpAAG7ArQB8BjxAfACtAG7AwAB8xi0AfMKAAH/DrQBuykAArQB8BoAAbwCtAIA
+        AfQatAH0CQAB8g+0Af8hAAL0Af8EAAK0AfEaAAHxArQCAAG8GrQBvAkAAfEPtAH/HwAB/wH0BP8DAAK0
+        AfEJAAHyA7QBuwwAAfECtAIAAbwatAG8CQAB9A60AfAfAAH/AfQB/wL0Af8B9AMAArQB8QkAAf8EtAH0
+        CwAB8QK0AgAB8Bq0AfAKAAHzDLQBvAH/HgAB/wH0Af8B9AEAAfQB/wH0AwACtAHxCgAB8QO0AbwLAAHx
+        ArQCAAH0GrQB9AsAAfQBuwm0AbsB/x8AAfQB/wH0AQAB9AH/AfQEAAK0AfEKAAH/BLQB/woAAfECtAMA
+        AfAYtAHxDQAB/wG7B7QBuwH/HwAC/wH0AQAB9AH/AfQB/wQAArQB8QsAAfEDtAHwCgAB8QK0AwAB/wHx
+        FrQB8Q8AAf8Buwa0AfQDAAH/AfQB/xAAAf8E9AL/AwAC/wL0Af8B9AH/BQACtAHxCwAB/wS0Af8JAAHx
+        ArQFAAH0E7QBtQH0EQAB8wW0AbsDAAH/AbUCtAEJDAAB/wH0CP8B9AH/AQAB9AP/AfQB/wYAArQB8QwA
+        AfEDtAHzCQAB8QK0BgAB/wHwELQB8AH/DAAB/wHxAbwB8gIAAf8FtAG8AgAB/wG7BLQB9AoAAf8B9AL/
+        AfQB/wIAAf8C9AP/AvQC/wgAArQB8QwAAf8DtAG7CQAB8QK0CAAB/wHxAbsKtAG7AfEB/w0AAf8BuwO0
+        AfQCAAHzA7QBtQH/AQAB/wG7BbQBvAkAA/8B9AH/BwAB9AP/CwACtAHxDQAB8QO0Af8IAAHxArQLAAH0
+        CLQB9BAAAbwFtAH0AgAB9AHyAfMB/wIAAfQGtAG1CQAB9AH/AfQKAAT/CgACtAHxCAAGvAO0AbwIAAHx
+        ArQMAAG7BrQBuxAAAf8HtAH/BwAB/we0CAAB9AH/AfQBAAH0Af8JAAH0Af8B9AoAArQB8QgACrQIAAHx
+        ArQMAAG7BrQBuxAAAfQHtAH/CAAB8Aa0CAAB9AL/AQAB/wH0CgAB9AL/CQACtAHxCAAKtAgAAfECtAsA
+        Af8ItAH/DwAB8ga0AbsJAAH/AbsEtAG8BwAC/wH0DgAB9AL/CQACtAHxCAAK9AgAAfECtAoAAf8Buwi0
+        AbsB/w4AAfQGtAH/CgAB/wG8ArQBvAH/BwAB9AH/AfQOAAL/AfQJAAK0AfEaAAHxArQKAAG8CrQBvA4A
+        Af8FtAHzCAAB/wL0AgAD/wHzBwAB9AP/AfQB/wwAAf8B9AkAArQB8RoAAfECtAkAAfQMtAH0DgAB8QO0
+        AfABAAH/AvQB/wMAAf8BuwK0AbsB/wEAAfQBtAG8BwAB9AL/AfQC/wsAAv8B9AkAArQB8Br/AfACtAkA
+        AbwMtAG8DwAB9AHwAfMBAAH/AbsCtAG7Af8CAAHwBLQBvAEAAf8BuwH0BwAB9AH/AfQC/wH0CwAC/wH0
+        CQAgtAgAAf8OtA8AAvQB/wEAAfAEtAHzAgABtQW0Af8BAAH/CAAC/wH0AQAD/woAAfQC/wkAILQIAAH/
+        DrQB/w4AAfMBtAHzAf8FtAEJAQAB/wa0AfQLAAH0Av8B9AH/AfQB/wgAA/8KACC0CAAB9A60AfQOAAH/
+        AbwC/wW0AbsBAAH/BrQB/wsAAv8B9AEAAfQC/wH0Av8FAAH0Af8B9AoACLQBuwG1DLQBtQG7CLQIAAHz
+        DrQB8xEAAf8FtAG1AQAB/wW0AbUNAAH0Af8B9AEAAfQD/wH0BAAB9AH/AfQB/woABrQBuwP/AbwKtAG8
+        A/8Buwa0CAAB8w60AfMSAAG7BLQBuwIABbQB8w0AAf8B9AH/AfQC/wP0AgAB/wH0A/8LAAa0AfQB8gG0
+        AbwB/wq0Af8BCQG0AfIB9Aa0CAAB9A60AfQSAAH0BLQBvAIAAbwDtAG8Af8OAAH/AfQC/wL0Av8C9AL/
+        AfQB/wwAAbwFtAH/AQkBtAG1AQAKtAEAAbUBtAEJAf8FtAG8CQANtAG1FAAB8AO0AfQCAAH/ArsB8gH/
+        EQAB/wH0Bv8C9A4AAf8BuwS0Af8BCQG0AbUBAAq0AQABtQG0AQkB/wS0AbsB/wkAAfEMtAHyFQAB9AHy
+        AfQbAAH/BPQB/xEAAf8B8wO8Af8BCQG0AbUBAAq8AQABtQG0AQkB/wO8AfMB/woAAf8Buwq0AbsB/xYA
+        Af8B8wH0AQAB/wLzAf8yAAEJAbQBtQwAAbUBtAEJEQAB/wG7CLQBuwH/FwAB/wG1AbsBAAH/AbQBuwH/
+        MgAB8wG0AfAMAAHwAbQB8xMAAfQBvAS0AbwB9BoAAf8B8AEAAf8BvAH/LAABQgFNAT4HAAE+AwABKAMA
+        AYADAAFAAwABAQEAAQEGAAEEFgAD/wEABP8MAAT/DAAE/wwAA/8BjwwAAv8B/gEHDAAC/wH8AQcMAAL/
+        AfgBRwwAAv8B+AGPDAAC/wHxAQ8MAAH/AcABcAEfDAAB/gEAARABPwwAAfwBDAEAAf8MAAH4AT8BhwH/
+        DAAB+AH/AcMB/wwAAfEBPwHjAf8MAAHxAT8B8QH/DAAB4wH/AfEB/wwAAeMB/wHxAf8MAAHgAX8B+QH/
+        DAAB4AF/AfEB/wwAAeABfwHxAf8MAAHiAT8B8QH/DAAB8AEfAeMB/wwAAfEBAwHjAf8MAAH4AYMBwwH/
+        DAAB+AEDAQcB/wwAAfwBAAEPAf8MAAH/AQABPwH/DAAB/wHAAv8MAAT/DAAE/wwABP8MAAGAAgABAQH+
+        AgABfwH/AYABAwX/BAAB8AIAAQ8B/wEAAQEF/wQAAeACAAEHAf4BAAEBBf8BHwL/AfgBwAIAAQMB/gIA
+        BP8BjwEfAv8B+AHAAgABAwH+AgAD/wH+AQcBHwHwAX8B+AHAAgABAwH+AQABAQP/AfwBBwEfAfABPwH4
+        AcACAAEDAf8BAAEBA/8B+AFHAR8B+AE/AfgBwAIAAQMB/wGAAQMD/wH4AY8BHwH4AR8B+AHgAgABBwH/
+        AcABBwP/AfEBDwEfAfwBHwH4AeACAAEPAf8B4AEOAT8B/wHAAXACHwH8AQ8C+AIAAR8B/wHwARwBHwH+
+        AQABEAE/AR8B/gEPAfgB/AIAAT8B/AEwARgBDwH8AQwBAAH/AR8B/gEPAfgB/wIAAf8B+AEYARABDwH4
+        AT8BhwH/AR8B/wEHAfgB/wHgAQcB/wH4AQwBMAEPAfgB/wHDAf8BHwHgAQcB+AH/AfABDwH/AfABBwHw
+        AQ8B8QE/AeMB/wEfAeABBwH4Af8B8AEPAf8B8AEHAfgBDwHxAT8B8QH/AR8B4AEHAfgB/wHgAQcB/wHw
+        AQ8B+AEPAeMB/wHxAf8BHwHgAQcB+AH/AcABAwH/AfABDwH8AQ8B4wH/AfEB/wEfAv8B+AH/AcABAwH/
+        AfABHwHjAQ8B4AF/AfkB/wEfAv8B+AH/AYABAQH/AfgBIQHAAY8B4AF/AfEB/wQAAf8BgAEBAf8B/AFA
+        AcABjwHgAX8B8QH/BAAB/wEAAQEB/wH8AUABwAFfAeIBPwHxAf8EAAH/AgAB/wH8AQABgAF/AfABHwHj
+        Af8EAAH/AgAB/wH8AQABgAF/AfEBAwHjAf8EAAH/AgAC/wKAAf8B+AGDAcMB/wQAAf8CAAL/AsAB/wH4
+        AQMBBwH/BAAB/wIAAv8CwAH/AfwBAAEPAf8BAAEgAQQBAAH/AYABAQL/AeABwQL/AQABPwH/AQABIAEE
+        AQAB/wGAAQEC/wHxA/8BwAL/AYABIAEEAQEB/wGAAQEC/wH4AYcF/wH+AT8B/AF/Af8BwAEDAv8B+AGH
+        Bf8B/gE/AfwBfwH/AfABDwL/AfwBjwX/Cw==
 </value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
